--- a/style/main.css
+++ b/style/main.css
@@ -27,6 +27,7 @@
     border-width: 2px;
     border-left-width: 0px;
     border-right-width: 0px;
+    border-bottom-width: 0px;
   }
   .contacts {
     display: none !important;
@@ -48,8 +49,13 @@
     top: -5px;
     right: 60px;
   }
+  .menu button {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    width: 50%;
+  }
   .project {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
   }
   .project__name::after {
     display: none;
@@ -420,7 +426,6 @@ body:not(.theme--dark) .email-tooltip::before {
   background: transparent;
   padding: 0;
   font-size: 1.2em;
-  margin-right: 20px;
   position: relative;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -445,7 +450,7 @@ body:not(.theme--dark) .email-tooltip::before {
 }
 
 .menu .button:hover::after {
-  bottom: 0;
+  bottom: -10px;
   opacity: 1;
   left: 0;
   width: 100%;
@@ -462,7 +467,7 @@ body:not(.theme--dark) .email-tooltip::before {
 .menu .menu--selected::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: 0;
   width: 100%;
   height: 2px;
