--- a/style/main.sass
+++ b/style/main.sass
@@ -36,6 +36,7 @@ $upper-height: 30px
         border-width: 2px
         border-left-width: 0px
         border-right-width: 0px
+        border-bottom-width: 0px
     .contacts
         display: none !important
     .container 
@@ -50,8 +51,13 @@ $upper-height: 30px
         &::before
             top: -5px
             right: 60px
+    .menu
+        button
+            padding-left: 20px !important
+            padding-right: 20px !important
+            width: 50%
     .project
-        margin-bottom: 50px
+        margin-bottom: 20px
         &__name::after
             display: none
         .description
@@ -289,10 +295,8 @@ body:not(.theme--dark)
     height: 50px
     .button
         background: transparent
-        // text-transform: uppercase
         padding: 0
         font-size: 1.2em
-        margin-right: 20px
         position: relative
         transition: 0.3s
         &::after
@@ -309,7 +313,7 @@ body:not(.theme--dark)
         &:hover
             font-size: 1.4em
             &::after
-                bottom: 0
+                bottom: -10px
                 opacity: 1
                 left: 0
                 width: 100%
@@ -321,7 +325,7 @@ body:not(.theme--dark)
         &::after
             content: ""
             position: absolute
-            bottom: 0
+            bottom: -10px
             left: 0
             width: 100%
             height: 2px
